--- a/First-app/src/app/components/listaSeries/listaSeries.component.html
+++ b/First-app/src/app/components/listaSeries/listaSeries.component.html
@@ -16,7 +16,7 @@ div {
   <h1>Empezadas</h1>
   <mat-list role="list">
     <mat-list-item role="listitem">
-      <a href="/serie">
+      <a routerLink="/serie">
                       Serie
                     </a>
     </mat-list-item>
@@ -45,4 +45,5 @@ div {
   <button mat-list-item> Save </button>
   <button mat-list-item> Undo </button>
 </mat-action-list>
+
 </html>
